--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ bitflags = "1.0.3"
 serde = {version = "1.0.70", default-features = false, features = ["rc"]}
 serde_json = "1.0.24"
 serde_derive = "1.0.70"
+rand = "0.5.4"
