--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ serde = {version = "1.0.70", default-features = false, features = ["rc"]}
 serde_json = "1.0.24"
 serde_derive = "1.0.70"
 rand = "0.5.4"
+log = "0.4.3"
+env_logger = "0.5.10"
